endscore page ready

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -87,7 +87,6 @@
                     d="m134.3,56.96c0,3.42,0,6.68,0,9.94,0,.48.03.96-.03,1.43-.11.87-.64,1.34-1.53,1.38-.88.04-1.47-.35-1.67-1.22-.09-.42-.09-.87-.09-1.3,0-3.34,0-6.69,0-10.22-.77,0-1.47.02-2.17,0-1.14-.05-1.74-.6-1.72-1.56.02-.95.62-1.5,1.77-1.5,2.56-.02,5.11,0,7.67,0,1,0,1.6.46,1.66,1.48.06.98-.52,1.54-1.66,1.59-.68.03-1.35,0-2.22,0Z"
                   />
                 </svg>
-                
               </h1>
             </div>
           </div>
@@ -100,11 +99,11 @@
             <div class="c-game">
               <button class="c-game__body o-button-reset js-selected-game" data-game="bluevsred">
                 <div class="c-game__icon">
-                  <svg class="c-icon--lg" width="77" height="77" viewBox="0 0 77 77">
-                    <g transform="translate(-286.5 -347.5)">
+                  <svg class="c-icon--lg" xmlns="http://www.w3.org/2000/svg" width="74" height="74" viewBox="0 0 74 74">
+                    <g transform="translate(-288 -349)">
                       <g transform="translate(288.308 349.308)">
-                        <path d="M37,0h0a0,0,0,0,1,0,0V74a0,0,0,0,1,0,0h0A37,37,0,0,1,0,37v0A37,37,0,0,1,37,0Z" transform="translate(-0.308 -0.308)" fill="#f33" stroke="#919799" stroke-width="3" />
-                        <path d="M0,0H0A37,37,0,0,1,37,37v0A37,37,0,0,1,0,74H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" transform="translate(36.692 -0.308)" fill="#44c8f5" stroke="#919799" stroke-width="3" />
+                        <path d="M37,0h0a0,0,0,0,1,0,0V74a0,0,0,0,1,0,0h0A37,37,0,0,1,0,37v0A37,37,0,0,1,37,0Z" transform="translate(-0.308 -0.308)" fill="#f33" />
+                        <path d="M0,0H0A37,37,0,0,1,37,37v0A37,37,0,0,1,0,74H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" transform="translate(36.692 -0.308)" fill="#3cb0d9" />
                       </g>
                     </g>
                   </svg>
@@ -128,16 +127,18 @@
             <div class="c-game">
               <button class="c-game__body o-button-reset js-selected-game" data-game="zengame">
                 <div class="c-game__icon">
-                  <svg class="c-icon--lg u-color-zen-game" width="24" height="24" viewBox="0 0 48 48" fill="none">
-                    <circle cx="24" cy="28" r="16" fill="none" stroke-width="2" />
-                    <path d="M28 4L20 4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                    <path d="M24 4V12" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                    <path d="M35 16L38 13" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                    <path d="M24 28V22" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                    <path d="M24 28H18" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                  <svg class="c-icon--lg" xmlns="http://www.w3.org/2000/svg" width="74" height="74" viewBox="0 0 74 74">
+                    <g transform="translate(-117 -401)">
+                      <path d="M37,0A37,37,0,1,1,0,37,37,37,0,0,1,37,0Z" transform="translate(117 401)" fill="#f56331" />
+                      <g transform="translate(130 414)">
+                        <path d="M24,44.333A18.333,18.333,0,1,0,5.667,26,18.333,18.333,0,0,0,24,44.333Z" fill="none" stroke="#fff" stroke-linejoin="round" stroke-width="3" />
+                        <path d="M23.759,15.354V26.362l7.772,7.772" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" />
+                        <path d="M4,9l7-5" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" />
+                        <path d="M44,9,37,4" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" />
+                      </g>
+                    </g>
                   </svg>
                 </div>
-
                 <div class="c-game__title">ZEN GAME</div>
               </button>
               <button class="c-game__info-btn js-info-btn o-button-reset" data-game="zengame">
@@ -156,20 +157,20 @@
             </div>
             <div class="c-game">
               <button class="c-game__body o-button-reset js-selected-game" data-game="minesweeper">
-                <div class="c-game__icon u-color-mine-sweeper">
-                  <svg class="c-icon--lg" width="24" height="24" viewBox="0 0 48 48" fill="none">
-                    <path
-                      d="M11.2632 44L14.6271 35.6852C10.031 32.5934 7 27.2927 7 21.2727C7 11.7333 14.6112 4 24 4C33.3888 4 41 11.7333 41 21.2727C41 27.2927 37.969 32.5934 33.3729 35.6852L36.7368 44H11.2632Z"
-                      fill="none"
-                      stroke-width="2"
-                      stroke-linejoin="round"
-                    />
-                    <path d="M20 38V44" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                    <path d="M28 38V44" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                    <path d="M17 23C18.6569 23 20 21.6569 20 20C20 18.3431 18.6569 17 17 17C15.3431 17 14 18.3431 14 20C14 21.6569 15.3431 23 17 23Z" fill="none" stroke-width="2" stroke-linejoin="round" />
-                    <path d="M31 23C32.6569 23 34 21.6569 34 20C34 18.3431 32.6569 17 31 17C29.3431 17 28 18.3431 28 20C28 21.6569 29.3431 23 31 23Z" fill="none" stroke-width="2" stroke-linejoin="round" />
-                    <path d="M32 44H24" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                    <path d="M24 44H16" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                <div class="c-game__icon">
+                  <svg class="c-icon--lg" xmlns="http://www.w3.org/2000/svg" width="74" height="74" viewBox="0 0 74 74">
+                    <g transform="translate(-104 -463)">
+                      <path d="M37,0A37,37,0,1,1,0,37,37,37,0,0,1,37,0Z" transform="translate(104 463)" fill="#f24330" />
+                      <g transform="translate(124 480)">
+                        <path d="M11.306,43.49l3.4-8.209A17.1,17.1,0,1,1,41.339,21.052a17.007,17.007,0,0,1-7.7,14.229l3.4,8.209Z" transform="translate(-7 -4)" fill="none" stroke="#fff" stroke-linejoin="round" stroke-width="3" />
+                        <path d="M20,38v5.976" transform="translate(-6.87 -4.486)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" />
+                        <path d="M28,38v5.976" transform="translate(-6.791 -4.486)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" />
+                        <path d="M16.988,22.976A2.988,2.988,0,1,0,14,19.988,2.988,2.988,0,0,0,16.988,22.976Z" transform="translate(-6.909 -4.186)" fill="none" stroke="#fff" stroke-linejoin="round" stroke-width="3" />
+                        <path d="M30.988,22.976A2.988,2.988,0,1,0,28,19.988,2.988,2.988,0,0,0,30.988,22.976Z" transform="translate(-6.727 -4.186)" fill="none" stroke="#fff" stroke-linejoin="round" stroke-width="3" />
+                        <path d="M31.968,44H24" transform="translate(-6.757 -4.51)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" />
+                        <path d="M23.968,44H16" transform="translate(-6.871 -4.51)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" />
+                      </g>
+                    </g>
                   </svg>
                 </div>
                 <div class="c-game__title">MINE SWEEPER</div>
@@ -191,13 +192,13 @@
             <div class="c-game">
               <button class="c-game__body o-button-reset js-selected-game" data-game="memorygame">
                 <div class="c-game__icon">
-                  <svg class="c-icon--lg" width="75" height="75" viewBox="0 0 75 75">
-                    <g transform="translate(-254.5 -305.5)">
+                  <svg class="c-icon--lg" xmlns="http://www.w3.org/2000/svg" width="72" height="72" viewBox="0 0 72 72">
+                    <g transform="translate(-256 -307)">
                       <g transform="translate(256 307)">
-                        <path d="M36,0h0a0,0,0,0,1,0,0V36a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0v0A36,36,0,0,1,36,0Z" fill="#f33" stroke="#919799" stroke-width="3" />
-                        <path d="M0,0H0A36,36,0,0,1,36,36v0a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" transform="translate(36)" fill="#44c8f5" stroke="#919799" stroke-width="3" />
-                        <path d="M0,0H36a0,0,0,0,1,0,0V36a0,0,0,0,1,0,0h0A36,36,0,0,1,0,0V0A0,0,0,0,1,0,0Z" transform="translate(0 36)" fill="#e5ea49" stroke="#919799" stroke-width="3" />
-                        <path d="M0,0H36a0,0,0,0,1,0,0V0A36,36,0,0,1,0,36H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" transform="translate(36 36)" fill="#5ed540" stroke="#919799" stroke-width="3" />
+                        <path d="M36,0h0a0,0,0,0,1,0,0V36a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0v0A36,36,0,0,1,36,0Z" fill="#f33" />
+                        <path d="M0,0H0A36,36,0,0,1,36,36v0a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" transform="translate(36)" fill="#3cb0d9" />
+                        <path d="M0,0H36a0,0,0,0,1,0,0V36a0,0,0,0,1,0,0h0A36,36,0,0,1,0,0V0A0,0,0,0,1,0,0Z" transform="translate(0 36)" fill="#e5ea49" />
+                        <path d="M0,0H36a0,0,0,0,1,0,0V0A36,36,0,0,1,0,36H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" transform="translate(36 36)" fill="#5ed540" />
                       </g>
                     </g>
                   </svg>
@@ -229,14 +230,17 @@
               <li class="c-tabbar__item">
                 <button class="c-tabbar__btn o-button-reset is-active js-tabs" data-page="home">
                   <div class="c-tabbar__symbol">
-                    <svg class="c-tabbar__icon" width="24" height="24" viewBox="0 0 48 48" fill="none" stroke="black">
-                      <path d="M9 18V42H39V18L24 6L9 18Z" fill="none" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
-                      <path d="M19 29V42H29V29H19Z" fill="none" stroke-width="3" stroke-linejoin="round" />
-                      <path d="M9 42H39" stroke-width="3" stroke-linecap="round" />
+                    <svg class="c-tabbar__icon" width="24" height="24" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <rect x="4" y="13" width="40" height="28" rx="14" fill="none" stroke="#333" stroke-width="3" stroke-linejoin="round" />
+                      <circle cx="31" cy="22" r="2" fill="#333" />
+                      <circle cx="35" cy="27" r="2" fill="#333" />
+                      <path d="M12 27H22M12 27H22" stroke="#333" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                      <path d="M24 7V13M24 7V13" stroke="#333" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                      <path d="M17 22V32" stroke="#333" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
                     </svg>
                   </div>
                 </button>
-                <span class="c-tabbar__text">Home</span>
+                <span class="c-tabbar__text">Games</span>
               </li>
               <li class="c-tabbar__item">
                 <button class="c-tabbar__btn o-button-reset js-tabs" data-page="rangschikking">
