--- a/Frontend/live-scorebord.html
+++ b/Frontend/live-scorebord.html
@@ -18,9 +18,22 @@
     <script src="script/app.js"></script>
   </head>
   <body class="js-live-page">
-     <section class="c-live">
+    <!-- <section class="c-live">
       <h1 class="c-live__start js-start-text">START</h1>
-      <h2 class="c-live__name">MEMORY GAME</h2>
+      <div class="c-live__game">
+        <svg class="c-icon" width="75" height="75" viewBox="0 0 75 75">
+          <g transform="translate(-254.5 -305.5)">
+            <g transform="translate(256 307)">
+              <path d="M36,0h0a0,0,0,0,1,0,0V36a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0v0A36,36,0,0,1,36,0Z" fill="#f33" stroke="#919799" stroke-width="3" />
+              <path d="M0,0H0A36,36,0,0,1,36,36v0a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" transform="translate(36)" fill="#44c8f5" stroke="#919799" stroke-width="3" />
+              <path d="M0,0H36a0,0,0,0,1,0,0V36a0,0,0,0,1,0,0h0A36,36,0,0,1,0,0V0A0,0,0,0,1,0,0Z" transform="translate(0 36)" fill="#e5ea49" stroke="#919799" stroke-width="3" />
+              <path d="M0,0H36a0,0,0,0,1,0,0V0A36,36,0,0,1,0,36H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" transform="translate(36 36)" fill="#5ed540" stroke="#919799" stroke-width="3" />
+            </g>
+          </g>
+        </svg>
+        <h2 class="c-live__name">MEMORY GAME</h2>
+      </div>
+
       <div class="c-live__timer">
         <div class="c-timer">
           <p class="c-timer__time js-time">00:00</p>
@@ -45,8 +58,8 @@
           </button>
         </div>
       </div>
-    </section>
-    <!-- <section class="c-live">
+    </section> -->
+    <section class="c-live">
       <h1 class="c-live__start c-live__start--bluevsred js-start-text">START</h1>
       <div class="c-live--red">
         <p class="c-live__score c-live__score--bluevsred js-score-red">0</p>
@@ -75,6 +88,6 @@
           </button>
         </div>
       </div>
-    </section> -->
+    </section>
   </body>
 </html>
