--- a/Frontend/rangschikking.html
+++ b/Frontend/rangschikking.html
@@ -145,10 +145,13 @@
               <li class="c-tabbar__item">
                 <button class="c-tabbar__btn o-button-reset js-tabs" data-page="home">
                   <div class="c-tabbar__symbol">
-                    <svg class="c-tabbar__icon" width="24" height="24" viewBox="0 0 48 48" fill="none" stroke="black">
-                      <path d="M9 18V42H39V18L24 6L9 18Z" fill="none" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
-                      <path d="M19 29V42H29V29H19Z" fill="none" stroke-width="3" stroke-linejoin="round" />
-                      <path d="M9 42H39" stroke-width="3" stroke-linecap="round" />
+                     <svg class="c-tabbar__icon" width="24" height="24" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <rect x="4" y="13" width="40" height="28" rx="14" fill="none" stroke="#333" stroke-width="3" stroke-linejoin="round" />
+                      <circle cx="31" cy="22" r="2" fill="#333" />
+                      <circle cx="35" cy="27" r="2" fill="#333" />
+                      <path d="M12 27H22M12 27H22" stroke="#333" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                      <path d="M24 7V13M24 7V13" stroke="#333" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                      <path d="M17 22V32" stroke="#333" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
                     </svg>
                   </div>
                 </button>
