--- a/Frontend/endscore.html
+++ b/Frontend/endscore.html
@@ -14,10 +14,11 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/screen.css" />
 
+    <script src="vendor/mqtt.js"></script>
     <script src="script/datahandler.js"></script>
     <script src="script/app.js"></script>
   </head>
-  <body class="c-endscore-page">
+  <body class="js-endscore-page">
     <main>
       <section class="o-row o-row--endscore">
         <div class="o-container">
@@ -25,7 +26,7 @@
             <div class="c-score-header">
               <div class="c-score-header__ring">
                 <p class="c-score-header__title">score</p>
-                <p class="c-score-header__score js-endscore">0</p>
+                <p class="c-score-header__score js-score">0</p>
               </div>
             </div>
           </div>
@@ -33,7 +34,7 @@
       </section>
       <section class="o-row">
         <div class="o-container">
-          <div class="c-endscore__card">
+          <div class="c-endscore__card js-card">
             <svg class="c-endscore__icon" width="75" height="75" viewBox="0 0 75 75">
               <g transform="translate(-254.5 -305.5)">
                 <g transform="translate(256 307)">
@@ -44,7 +45,7 @@
                 </g>
               </g>
             </svg>
-            <h2 class="c-endscore__game js-name">Memory game</h2>
+            <h2 class="c-endscore__game">Memory game</h2>
           </div>
           <div class="c-endscore__body">
             <div class="c-endscore__infos">
