--- a/Frontend/live-scorebord.html
+++ b/Frontend/live-scorebord.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/screen.css" />
 
+    <script src="vendor/mqtt.js"></script>
     <script src="script/datahandler.js"></script>
     <script src="script/app.js"></script>
   </head>
