--- a/Frontend/rangschikking.html
+++ b/Frontend/rangschikking.html
@@ -23,7 +23,7 @@
       <!-- header -->
       <header class="o-row u-p-clear">
         <div class="o-container">
-          <div class="c-header">
+          <div class="c-header u-mb-clear">
             <h1 class="c-header__title">Rangschikking</h1>
           </div>
         </div>
