feat: testing mqtt

--- a/Frontend/endscore.html
+++ b/Frontend/endscore.html
@@ -49,7 +49,7 @@
           </div>
           <div class="c-endscore__body">
             <div class="c-endscore__infos">
-              <ul class="o-list c-endscore__list">
+              <ul class="o-list c-endscore__list js-infos">
                 <li class="c-endscore__item">
                   <h3 class="c-endscore__item-title">Ingedrukte knoppen</h3>
                   <p class="c-endscore__item-text">12</p>
