--- a/Frontend/rangschikking.html
+++ b/Frontend/rangschikking.html
@@ -33,7 +33,7 @@
           <div class="c-tags">
             <ul class="o-list c-tags__list">
               <li class="c-tag"><input class="o-hide-accessible js-game-btn" type="radio" name="game" id="memorygame" checked /><label for="memorygame">Memory Game</label></li>
-              <li class="c-tag"><input class="o-hide-accessible js-game-btn" type="radio" name="game" id="redvsblue" /><label for="redvsblue">Red vs Blue</label></li>
+              <li class="c-tag"><input class="o-hide-accessible js-game-btn" type="radio" name="game" id="bluevsred" /><label for="bluevsred">Red vs Blue</label></li>
               <li class="c-tag"><input class="o-hide-accessible js-game-btn" type="radio" name="game" id="zengame" /><label for="zengame">Zen Game</label></li>
               <li class="c-tag"><input class="o-hide-accessible js-game-btn" type="radio" name="game" id="minesweeper" /><label for="minesweeper">Mine Sweeper</label></li>
             </ul>
