--- a/Testing_Memorygame/testing.html
+++ b/Testing_Memorygame/testing.html
@@ -25,10 +25,10 @@
         <button class="js-button-led" data-led-id="3">Blue</button>
       </div>
       <div class="button-container">
-        <button class="js-button-game" data-game-id="memory">memory</button>
-        <button class="js-button-game" data-game-id="redblue">redblue</button>
-        <button class="js-button-game" data-game-id="zen">zen</button>
-        <button class="js-button-game" data-game-id="minesweepr">minesweepr</button>
+        <button class="js-button-game" data-game-id="memorygame">memory</button>
+        <button class="js-button-game" data-game-id="bluevsred">redblue</button>
+        <button class="js-button-game" data-game-id="zengame">zen</button>
+        <button class="js-button-game" data-game-id="minesweeper">minesweepr</button>
       </div>
       <div class="button-container button-container-test">
         <button class="js-button-action" data-action-id="stop">stop</button>
