--- a/Frontend/logpage.html
+++ b/Frontend/logpage.html
@@ -51,115 +51,96 @@
                             <tr>
                                 <th class="sorting sorting_asc" tabindex="0" aria-controls="example" rowspan="1"
                                     colspan="1" aria-sort="ascending"
-                                    aria-label="Name: activate to sort column descending" style="width: 131.163px;">Name
+                                    aria-label="Name: activate to sort column descending" style="width: 131.163px;">Date
                                 </th>
+
                                 <th class="sorting" tabindex="0" aria-controls="example" rowspan="1" colspan="1"
                                     aria-label="Position: activate to sort column ascending" style="width: 218.163px;">
-                                    Position</th>
+                                    Location</th>
                                 <th class="sorting" tabindex="0" aria-controls="example" rowspan="1" colspan="1"
-                                    aria-label="Office: activate to sort column ascending" style="width: 96.9625px;">
-                                    Office</th>
-                                <th class="sorting" tabindex="0" aria-controls="example" rowspan="1" colspan="1"
-                                    aria-label="Age: activate to sort column ascending" style="width: 39.0125px;">Age
+                                    aria-label="Position: activate to sort column ascending" style="width: 218.163px;">
+                                    Type
                                 </th>
+
                                 <th class="sorting" tabindex="0" aria-controls="example" rowspan="1" colspan="1"
-                                    aria-label="Start date: activate to sort column ascending" style="width: 85.55px;">
-                                    Start date</th>
-                                <th class="sorting" tabindex="0" aria-controls="example" rowspan="1" colspan="1"
-                                    aria-label="Salary: activate to sort column ascending" style="width: 73.3px;">Salary
+                                    aria-label="Age: activate to sort column ascending" style="width: 39.0125px;">Error
                                 </th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr class="odd">
-                                <td class="sorting_1">Airi Satou</td>
+                                <td class="sorting_1">2022-06-01 10:00:00,000</td>
+                                <td> name</td>
                                 <td>Accountant</td>
                                 <td>Tokyo</td>
-                                <td>33</td>
-                                <td>2008-11-28</td>
-                                <td>$162,700</td>
+
                             </tr>
                             <tr class="even">
-                                <td class="sorting_1">Angelica Ramos</td>
+                                <td class="sorting_1">2022-06-01 11:15:00,000</td>
+                                <td> name</td>
                                 <td>Chief Executive Officer (CEO)</td>
                                 <td>London</td>
-                                <td>47</td>
-                                <td>2009-10-09</td>
-                                <td>$1,200,000</td>
                             </tr>
                             <tr class="odd">
-                                <td class="sorting_1">Ashton Cox</td>
+                                <td class="sorting_1">2022-06-01 11:15:00,000</td>
+                                <td> name</td>
                                 <td>Junior Technical Author</td>
                                 <td>San Francisco</td>
-                                <td>66</td>
-                                <td>2009-01-12</td>
-                                <td>$86,000</td>
+
                             </tr>
                             <tr class="even">
-                                <td class="sorting_1">Bradley Greer</td>
+                                <td class="sorting_1">2022-06-02 14:30:00,000</td>
+                                <td> name</td>
                                 <td>Software Engineer</td>
                                 <td>London</td>
-                                <td>41</td>
-                                <td>2012-10-13</td>
-                                <td>$132,000</td>
+
                             </tr>
                             <tr class="odd">
                                 <td class="sorting_1">Brenden Wagner</td>
+                                <td> name</td>
                                 <td>Software Engineer</td>
                                 <td>San Francisco</td>
-                                <td>28</td>
-                                <td>2011-06-07</td>
-                                <td>$206,850</td>
                             </tr>
                             <tr class="even">
                                 <td class="sorting_1">Brielle Williamson</td>
+                                <td> name</td>
                                 <td>Integration Specialist</td>
                                 <td>New York</td>
-                                <td>61</td>
-                                <td>2012-12-02</td>
-                                <td>$372,000</td>
                             </tr>
                             <tr class="odd">
                                 <td class="sorting_1">Bruno Nash</td>
+                                <td> name</td>
                                 <td>Software Engineer</td>
                                 <td>London</td>
-                                <td>38</td>
-                                <td>2011-05-03</td>
-                                <td>$163,500</td>
+
                             </tr>
                             <tr class="even">
                                 <td class="sorting_1">Caesar Vance</td>
+                                <td> name</td>
                                 <td>Pre-Sales Support</td>
                                 <td>New York</td>
-                                <td>21</td>
-                                <td>2011-12-12</td>
-                                <td>$106,450</td>
+
                             </tr>
                             <tr class="odd">
                                 <td class="sorting_1">Cara Stevens</td>
+                                <td> name</td>
                                 <td>Sales Assistant</td>
                                 <td>New York</td>
-                                <td>46</td>
-                                <td>2011-12-06</td>
-                                <td>$145,600</td>
+
                             </tr>
                             <tr class="even">
                                 <td class="sorting_1">Cedric Kelly</td>
+                                <td> name</td>
                                 <td>Senior Javascript Developer</td>
                                 <td>Edinburgh</td>
-                                <td>22</td>
-                                <td>2012-03-29</td>
-                                <td>$433,060</td>
+
                             </tr>
                         </tbody>
                         <tfoot>
                             <tr>
-                                <th rowspan="1" colspan="1">Name</th>
-                                <th rowspan="1" colspan="1">Position</th>
-                                <th rowspan="1" colspan="1">Office</th>
-                                <th rowspan="1" colspan="1">Age</th>
-                                <th rowspan="1" colspan="1">Start date</th>
-                                <th rowspan="1" colspan="1">Salary</th>
+                                <th rowspan="1" colspan="1">Date</th>
+                                <th rowspan="1" colspan="1">Type</th>
+                                <th rowspan="1" colspan="1">Error</th>
                             </tr>
                         </tfoot>
                     </table>
