fix: entries en search

--- a/Frontend/logging.html
+++ b/Frontend/logging.html
@@ -72,7 +72,7 @@
                 <td>vb type</td>
                 <td>vb message</td>
               </tr>-->
-
+            </tbody>
            
           </table>
           
