--- a/Frontend/battery.html
+++ b/Frontend/battery.html
@@ -84,7 +84,7 @@
                 <span class="c-tabbar__text">Batterij</span>
               </li>
               <li class="c-tabbar__item">
-                <button class="c-tabbar__btn o-button-reset js-tabs" data-page="log">
+                <button class="c-tabbar__btn o-button-reset js-tabs" data-page="logging">
                   <div class="c-tabbar__symbol">
                     <svg class="c-tabbar__icon" width="24" height="24" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M40 23V14L31 4H10C8.89543 4 8 4.89543 8 6V42C8 43.1046 8.89543 44 10 44H22" stroke="#333" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
