--- a/Frontend/battery.html
+++ b/Frontend/battery.html
@@ -34,25 +34,29 @@
             <div class="c-battery__item">
               <h2 class="c-battery__title">Paal 1</h2>
               <div class="c-battery">
-                <div class="c-battery-level" style="width: 50%"></div>
+                <div class="c-battery-level" style="width: 99%"></div>
+                <p class="c-battery__procent">99%</p>
               </div>
             </div>
             <div class="c-battery__item">
               <h2 class="c-battery__title">Paal 2</h2>
               <div class="c-battery">
                 <div class="c-battery-level" style="width: 34%"></div>
+                <p class="c-battery__procent">34%</p>
               </div>
             </div>
             <div class="c-battery__item">
               <h2 class="c-battery__title">Paal 3</h2>
               <div class="c-battery">
                 <div class="c-battery-level c-battery-level--medium" style="width: 20%"></div>
+                <p class="c-battery__procent">20%</p>
               </div>
             </div>
             <div class="c-battery__item">
               <h2 class="c-battery__title">Paal 4</h2>
               <div class="c-battery">
                 <div class="c-battery-level c-battery-level--low" style="width: 3%"></div>
+                <p class="c-battery__procent">3%</p>
               </div>
             </div>
           </div>
