--- a/Frontend/rangschikking.html
+++ b/Frontend/rangschikking.html
@@ -66,13 +66,13 @@
                 <li class="c-ranking__item c-ranking__item--third">
                   <span><img src="img/icons/thrid_place.svg" alt="eerste plaat badge" /></span><span>Ruben</span><span class="c-ranking__score">1000p</span>
                 </li>
-                <li class="c-ranking__item"><span>4</span><span>Boy33</span><span class="c-ranking__score">900p</span></li>
+                <!-- <li class="c-ranking__item"><span>4</span><span>Boy33</span><span class="c-ranking__score">900p</span></li>
                 <li class="c-ranking__item"><span>5</span><span>DCDF</span><span class="c-ranking__score">843p</span></li>
                 <li class="c-ranking__item"><span>6</span><span>Jens</span><span class="c-ranking__score">732p</span></li>
                 <li class="c-ranking__item"><span>7</span><span>Arnoux</span><span class="c-ranking__score">632p</span></li>
                 <li class="c-ranking__item"><span>8</span><span>Arnuad</span><span class="c-ranking__score">532p</span></li>
                 <li class="c-ranking__item"><span>9</span><span>Kobe</span><span class="c-ranking__score">242p</span></li>
-                <li class="c-ranking__item"><span>10</span><span>Bjarne</span><span class="c-ranking__score">132p</span></li>
+                <li class="c-ranking__item"><span>10</span><span>Bjarne</span><span class="c-ranking__score">132p</span></li> -->
               </ul>
             </div>
           </div>
